Source/Angular/IMS/src/styles.css
/* ... */
.fa-bar {
  color: var(--light);
}

.bg-custom {
  background-color: var(--primary);
}

.wrapper-dashboard {
  display: table;
  height: 100%;
  width: 100%;
}

/* Drive Details */

label {
  display: block;
  font: 1rem 'Fira Sans', sans-serif;
}

input,
label {
  margin: .4rem 0;
}

/* #BackButton {
  padding-left: 17rem;
  margin-top: 15rem;
} */

.my-box {
  overflow-y: scroll;
  max-height: 50vh;
}

.AddMemberPool {
  width: 100%;
  margin-left: 10px;
}

/* #dashselect {
  padding-top: 10rem;
} */

/* #denied {
  visibility: hidden;
  min-width: 250px;
  margin-left: -125px;
  background-color: #333;
  color: #fff;
  text-align: center;
  border-radius: 2px;
  padding: 16px;
  position: fixed;
  z-index: 1;
  left: 50%;
  bottom: 30px;
  font-size: 17px;
}

#denied.show {
  visibility: visible;
  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
  animation: fadein 0.5s, fadeout 0.5s 2.5s;
}

@-webkit-keyframes fadein {
  from {
    bottom: 0;
    opacity: 0;
  }

  to {
    bottom: 30px;
    opacity: 1;
  }
}

@keyframes fadein {
  from {
    bottom: 0;
    opacity: 0;
  }

  to {
    bottom: 30px;
    opacity: 1;
  }
}

@-webkit-keyframes fadeout {
  from {
    bottom: 30px;
    opacity: 1;
  }

  to {
    bottom: 0;
    opacity: 0;
  }
}

@keyframes fadeout {
  
  from {
    bottom: 30px;
    opacity: 1;
  }

  to {
    bottom: 0;
    opacity: 0;
  }
}

#accept {
  visibility: hidden;
  min-width: 250px;
  margin-left: -125px;
  background-color: #333;
  color: #fff;
  text-align: center;
  border-radius: 2px;
  padding: 16px;
  position: fixed;
  z-index: 1;
  left: 50%;
  bottom: 30px;
  font-size: 17px;
}

#accept.show {
  visibility: visible;
  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
  animation: fadein 0.5s, fadeout 0.5s 2.5s;
}

@-webkit-keyframes fadein {
  from {
    bottom: 0;
    opacity: 0;
  }

  to {
    bottom: 30px;
    opacity: 1;
  }
}

@keyframes fadein {
  from {
    bottom: 0;
    opacity: 0;
  }

  to {
    bottom: 30px;
    opacity: 1;
  }
}

@-webkit-keyframes fadeout {
  from {
    bottom: 30px;
    opacity: 1;
  }

  to {
    bottom: 0;
    opacity: 0;
  }
}

@keyframes fadeout {
  from {
    bottom: 30px;
    opacity: 1;
  }

  to {
    bottom: 0;
    opacity: 0;
  }
} */


html,
body {
  height: 100%;
}

body {
  margin: 0;
  font-family: Roboto, "Helvetica Neue", sans-serif;
}

.spinner {
  border: 1px solid;
  position: fixed;
  z-index: 1;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 50 50'%3E%3Cpath d='M28.43 6.378C18.27 4.586 8.58 11.37 6.788 21.533c-1.791 10.161 4.994 19.851 15.155 21.643l.707-4.006C14.7 37.768 9.392 30.189 10.794 22.24c1.401-7.95 8.981-13.258 16.93-11.856l.707-4.006z'%3E%3CanimateTransform attributeType='xml' attributeName='transform' type='rotate' from='0 25 25' to='360 25 25' dur='0.6s' repeatCount='indefinite'/%3E%3C/path%3E%3C/svg%3E") center / 50px no-repeat;
}

#innercard {
  background-color: rgb(212, 163, 235);
}

#cards-align {
  padding-top: 10%;
}

/* @media screen and (max-width: 600px) {
  .dropdown {float: none;}
  .dropdown-content {position: relative;}
  .dropdown .dropbtn {
    display: block;
    width: 100%;
    text-align: left;
  }
} */

/* Interviewer Dashboard */
#numbersize {
  font-size: 40px;
}

/* TAC Create Pool */
#CreatingPool {
  text-decoration: none;
  color: black;
}

#CreatingPool:hover {
  color: #38114b;
}

#CreateButton {
  font-size: large;
  margin-left: 6.3rem;
  text-decoration-color: #FFF;
  border-radius: 2px;
  background-color: #f9f9f9;
}

#CreateButton:hover {
  color: #38114b;
}

.dropdown {
  padding-left: 0.5rem;

}

#DepartmentName {
  padding-top: 0.5rem;
}

#CPdropdown {
  background-color: #b295c0;
  text-decoration-color: var(--light);
}

/* Create Pool Ends */

/* Admin Add Role - Checkbox */

.checkboxalignment {
  margin-top: 2%;
}

